tests/NormalTests/paczka1/fuzzy1/76032835.err
Error in line 1: i01IGgN A716 63,8
Error in line 4: i01IGgN A670 118,9
Error in line 9: qqk1g9Y A670 41,9
Error in line 22: SHM A716 10,2
Error in line 23: lOd1yv6eXB A670 78,8
Error in line 24: SHM A697 19,2
Error in line 28: SHM A716 3,3
Error in line 18: A697 A670 38,9
Error in line 29: ZPH0bn A716 56,4
Error in line 40: A67 A440 280,
